--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="dropdown">
+    <!-- <div class="dropdown">
       <button class="glowbutton" >Button</button>
 
-  </div>
+  </div> -->
 
   <!-- <button style="position: absolute; z-index: 111; top: 0;" class="animation-btn">
     Play Animation
@@ -22,6 +22,7 @@
   </div>
    <div class="start"></div>
    <div class="start1"></div>
+   <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1.0.26/bundled/lenis.min.js"></script> 
   <script  src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.2/gsap.min.js"></script>
   <script  src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.2/ScrollTrigger.min.js"></script>
     <script type="module" src="/main.js"></script>
